--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -76,8 +76,8 @@ jobs:
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
           curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next-susfs/kernel/setup.sh" | bash -s next-susfs-dev
-          #cd KernelSU-Next/kernel
-          #KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
+          cd KernelSU-Next/kernel
+          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           KSU_VERSION=$(cd ./KernelSU-Next/kernel && git describe --tags --abbrev=0)
           echo "KSUVER=${KSU_VERSION}" >> $GITHUB_ENV
       - name: Setup SUSFS
