--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -27,10 +27,10 @@ jobs:
             kernel_version: "5.15"
          - model: OP11r
             soc: waipio
-            #branch: oneplus/sm8475
-            #manifest: oneplus_11r_v.xml
-            #android_version: android13
-            #kernel_version: "5.10"
+            branch: oneplus/sm8475
+            manifest: oneplus_11r_v.xml
+            android_version: android13
+            kernel_version: "5.10"
           - model: OP-OPEN
             soc: kalama
             branch: oneplus/sm8550
@@ -81,6 +81,12 @@ jobs:
             soc: sun
             branch: oneplus/sm8750
             manifest: oneplus_13.xml
+            android_version: android15
+            kernel_version: "6.6"
+          - model: OP13T
+            soc: sun
+            branch: oneplus/sm8750
+            manifest: oneplus_13t.xml
             android_version: android15
             kernel_version: "6.6"
           - model: OPAce5Pro
